--- a/.env
+++ b/.env
@@ -1,2 +1,14 @@
-API_KEY=GH97L2ECPO5UREFH
+# Alpha Vantage API Key
+ALPHA_VANTAGE_API_KEY=GH97L2ECPO5UREFH
+
+# Firebase Configuration
+FIREBASE_API_KEY=AIzaSyCxG5Y8Gu0BcZ0N-Sf2WM7oKDSuPO9qQl4
+FIREBASE_AUTH_DOMAIN=hackathon-37d07.firebaseapp.com
+FIREBASE_PROJECT_ID=hackathon-37d07
+FIREBASE_STORAGE_BUCKET=hackathon-37d07.firebasestorage.app
+FIREBASE_MESSAGING_SENDER_ID=777890425672
+FIREBASE_APP_ID=1:777890425672:web:76fd0310e35a941753217d
+FIREBASE_MEASUREMENT_ID=G-8818WDW8SH
+
+# Environment
 NODE_ENV=development
